--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -177,3 +177,7 @@ jobs:
         with:
           name: OpenWrt firmware
           path: ./artifact/
+ 
+————————————————
+版权声明：本文为CSDN博主「自由人AFreeMen」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/qq_35006858/article/details/103411914
